--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
         referrerpolicy="no-referrer"
     ></script>
     <script src="js/utils.js"></script>
+    <script src="js/characterClasses/falco.js"></script>
+    <script src="js/characterClasses/fox.js"></script>
     <script src="js/classes.js"></script>
     <script src="index.js"></script>
 </body>
